--- a/package.json
+++ b/package.json
@@ -1,19 +1,9 @@
 {
   "name": "cognivox-backend",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "description": "",
+  "type": "module",
   "dependencies": {
-    "axios": "^1.10.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "axios": "^1.6.0",
+    "dotenv": "^17.2.1"
   }
 }
